--- a/InternWeb2/static/index.html
+++ b/InternWeb2/static/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background: #181C25;
+            background: #f6f5f7;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,161 +23,37 @@
             padding: 1rem;
         }
 
-        .container {
-            background-color: #1E2330;
-            border-radius: 12px;
-            box-shadow: 0 14px 28px rgba(0,0,0,0.25);
-            position: relative;
-            overflow: hidden;
-            width: 100%;
-            max-width: 850px;
-            min-height: 600px;
-        }
-
-        .form-container {
-            position: absolute;
-            top: 0;
-            height: 100%;
-            transition: all 0.6s ease-in-out;
-        }
-
-        .sign-in-container {
-            left: 0;
-            width: 50%;
-            z-index: 2;
-        }
-
-        .container.right-panel-active .sign-in-container {
-            transform: translateX(100%);
-        }
-
-        .sign-up-container {
-            left: 0;
-            width: 50%;
-            opacity: 0;
-            z-index: 1;
-        }
-
-        .container.right-panel-active .sign-up-container {
-            transform: translateX(100%);
-            opacity: 1;
-            z-index: 5;
-            animation: show 0.6s;
-        }
-
-        @keyframes show {
-            0%, 49.99% {
-                opacity: 0;
-                z-index: 1;
-            }
-            50%, 100% {
-                opacity: 1;
-                z-index: 5;
-            }
-        }
-
-        .overlay-container {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            width: 50%;
-            height: 100%;
-            overflow: hidden;
-            transition: transform 0.6s ease-in-out;
-            z-index: 100;
-        }
-
-        .container.right-panel-active .overlay-container {
-            transform: translateX(-100%);
-        }
-
-        .overlay {
-            background: #1E2330;
-            color: #FFFFFF;
-            position: relative;
-            left: -100%;
-            height: 100%;
-            width: 200%;
-            transform: translateX(0);
-            transition: transform 0.6s ease-in-out;
-        }
-
-        .container.right-panel-active .overlay {
-            transform: translateX(50%);
-        }
-
-        .overlay-panel {
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            padding: 0 40px;
-            text-align: center;
-            top: 0;
-            height: 100%;
-            width: 50%;
-            transform: translateX(0);
-            transition: transform 0.6s ease-in-out;
-        }
-
-        .overlay-panel h1 {
-            color: #F2994A;
-            margin-bottom: 1rem;
-        }
-
-        .overlay-panel p {
-            color: #a0a0b0;
-            margin-bottom: 1.5rem;
-        }
-
-        .overlay-left {
-            transform: translateX(-20%);
-        }
-
-        .container.right-panel-active .overlay-left {
-            transform: translateX(0);
-        }
-
-        .overlay-right {
-            right: 0;
-            transform: translateX(0);
-        }
-
-        .container.right-panel-active .overlay-right {
-            transform: translateX(20%);
-        }
-
-        form {
-            background-color: #1E2330;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            padding: 0 50px;
-            height: 100%;
-            text-align: center;
-        }
-
         h1 {
-            font-weight: 600;
+            font-weight: bold;
             margin: 0;
-            font-size: 2rem;
-            color: #F2994A;
+            font-size: 1.5rem;
             margin-bottom: 1rem;
+            color: #333;
         }
 
         p {
             font-size: 0.875rem;
             line-height: 1.25rem;
             margin: 1.25rem 0;
-            color: #a0a0b0;
+            color: #666;
+        }
+
+        form {
+            background-color: #ffffff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
         }
 
         input {
-            background-color: #232838;
+            background-color: #f0f0f0;
             border: none;
-            color: #ffffff;
             padding: 0.75rem 1rem;
             margin: 0.5rem 0;
             width: 100%;
@@ -185,26 +61,60 @@
             font-size: 0.9rem;
         }
 
-        input::placeholder {
-            color: #a0a0b0;
+        input:focus {
+            outline: none;
+            background-color: #e8e8e8;
         }
 
         button {
-            background: #F2994A;
+            background-color: #ff4b2b;
             color: white;
             border: none;
-            padding: 0.75rem 2.5rem;
+            padding: 0.75rem 2rem;
             margin-top: 1rem;
             border-radius: 5px;
             cursor: pointer;
             font-weight: 600;
             font-size: 0.9rem;
-            transition: all 0.3s ease;
+            transition: transform 0.2s;
         }
 
         button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(242, 153, 74, 0.3);
+        }
+
+        button:active {
+            transform: translateY(0);
+        }
+
+        .error-message {
+            color: #ff4b2b;
+            font-size: 0.8rem;
+            margin-top: 0.5rem;
+            text-align: center;
+        }
+
+        .toggle-form {
+            margin-top: 1rem;
+            color: #666;
+            font-size: 0.9rem;
+        }
+
+        .toggle-form a {
+            color: #ff4b2b;
+            text-decoration: none;
+            font-weight: 500;
+            margin-left: 0.25rem;
+        }
+
+        .form-container {
+            display: none;
+            width: 100%;
+        }
+
+        .form-container.active {
+            display: flex;
+            justify-content: center;
         }
 
         .social-container {
@@ -214,186 +124,92 @@
         }
 
         .social-btn {
-            background-color: #232838;
-            border: 1px solid #2d3446;
-            color: #ffffff;
+            background-color: #fff;
+            border: 1px solid #ddd;
             border-radius: 5px;
             padding: 0.5rem 1rem;
             cursor: pointer;
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            transition: all 0.3s;
-            text-decoration: none;
+            transition: all 0.2s;
         }
 
         .social-btn:hover {
-            background-color: #2d3446;
-            transform: translateY(-2px);
+            background-color: #f5f5f5;
         }
 
         .social-btn img {
             width: 20px;
             height: 20px;
         }
-
-        .error-message {
-            color: #ff6b6b;
-            font-size: 0.8rem;
-            margin-top: 0.5rem;
-            text-align: center;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                min-height: 500px;
-                max-width: 400px;
-            }
-
-            .form-container {
-                width: 100%;
-                height: 100%;
-                transition: transform 0.6s ease-in-out;
-            }
-
-            .sign-in-container, .sign-up-container {
-                width: 100%;
-                transform: translateX(0);
-            }
-
-            .sign-up-container {
-                opacity: 1;
-                transform: translateX(100%);
-            }
-
-            .container.right-panel-active .sign-in-container {
-                transform: translateX(-100%);
-            }
-
-            .container.right-panel-active .sign-up-container {
-                transform: translateX(0);
-            }
-
-            .overlay-container {
-                display: none;
-            }
-
-            .toggle-container {
-                position: absolute;
-                bottom: 20px;
-                left: 0;
-                right: 0;
-                text-align: center;
-            }
-
-            .toggle-button {
-                background: none;
-                border: none;
-                color: #F2994A;
-                font-size: 0.9rem;
-                cursor: pointer;
-                padding: 0.5rem 1rem;
-            }
-
-            form {
-                padding: 0 30px;
-            }
-
-            .social-container {
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-        }
     </style>
 </head>
 <body>
-    <div class="container" id="container">
-        <div class="form-container sign-up-container">
-            <form id="signup-form" onsubmit="return handleSignup(event)">
-                <h1>Create Account</h1>
-                <div class="social-container">
-                    <a href="/auth/google/login" class="social-btn">
-                        <img src="https://www.google.com/favicon.ico" alt="Google">
-                        Google
-                    </a>
-                    <a href="/auth/github/login" class="social-btn">
-                        <img src="https://github.com/favicon.ico" alt="GitHub">
-                        GitHub
-                    </a>
-                    <a href="/auth/linkedin/login" class="social-btn">
-                        <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn">
-                        LinkedIn
-                    </a>
-                </div>
-                <p>or use your email for registration</p>
-                <input type="text" name="name" placeholder="Name" required />
-                <input type="email" name="email" placeholder="Email" required />
-                <input type="password" name="password" placeholder="Password" required />
-                <div id="signup-error" class="error-message"></div>
-                <button type="submit">Sign Up</button>
-            </form>
-        </div>
-        <div class="form-container sign-in-container">
-            <form id="signin-form" onsubmit="return handleSignin(event)">
-                <h1>Sign In</h1>
-                <div class="social-container">
-                    <a href="/auth/google/login" class="social-btn">
-                        <img src="https://www.google.com/favicon.ico" alt="Google">
-                        Google
-                    </a>
-                    <a href="/auth/github/login" class="social-btn">
-                        <img src="https://github.com/favicon.ico" alt="GitHub">
-                        GitHub
-                    </a>
-                    <a href="/auth/linkedin/login" class="social-btn">
-                        <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn">
-                        LinkedIn
-                    </a>
-                </div>
-                <p>or use your account</p>
-                <input type="email" name="email" placeholder="Email" required />
-                <input type="password" name="password" placeholder="Password" required />
-                <div id="signin-error" class="error-message"></div>
-                <button type="submit">Sign In</button>
-            </form>
-        </div>
-        <div class="overlay-container">
-            <div class="overlay">
-                <div class="overlay-panel overlay-left">
-                    <h1>Welcome Back!</h1>
-                    <p>To keep connected with us please login with your personal info</p>
-                    <button class="ghost" id="signIn">Sign In</button>
-                </div>
-                <div class="overlay-panel overlay-right">
-                    <h1>Hello, Friend!</h1>
-                    <p>Enter your personal details and start journey with us</p>
-                    <button class="ghost" id="signUp">Sign Up</button>
-                </div>
+    <div id="signup-container" class="form-container active">
+        <form id="signup-form" onsubmit="return handleSignup(event)">
+            <h1>Create Account</h1>
+            <div class="social-container">
+                <a href="/auth/google/login" class="social-btn">
+                    <img src="https://www.google.com/favicon.ico" alt="Google">
+                    Google
+                </a>
+                <a href="/auth/github/login" class="social-btn">
+                    <img src="https://github.com/favicon.ico" alt="GitHub">
+                    GitHub
+                </a>
+                <a href="/auth/linkedin/login" class="social-btn">
+                    <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn">
+                    LinkedIn
+                </a>
             </div>
-        </div>
-        <div class="toggle-container">
-            <button class="toggle-button" id="mobileSignIn">Already have an account? Sign In</button>
-            <button class="toggle-button" id="mobileSignUp" style="display: none;">Don't have an account? Sign Up</button>
-        </div>
+            <p style="text-align: center; color: #666;">or use your email for registration</p>
+            <input type="text" name="name" placeholder="Name" required />
+            <input type="email" name="email" placeholder="Email" required />
+            <input type="password" name="password" placeholder="Password" required />
+            <div id="signup-error" class="error-message"></div>
+            <button type="submit">Sign Up</button>
+            <p class="toggle-form">
+                Already have an account?<a href="#" onclick="toggleForm('signin')">Sign In</a>
+            </p>
+        </form>
+    </div>
+
+    <div id="signin-container" class="form-container">
+        <form id="signin-form" onsubmit="return handleSignin(event)">
+            <h1>Welcome Back</h1>
+            <div class="social-container">
+                <a href="/auth/google/login" class="social-btn">
+                    <img src="https://www.google.com/favicon.ico" alt="Google">
+                    Google
+                </a>
+                <a href="/auth/github/login" class="social-btn">
+                    <img src="https://github.com/favicon.ico" alt="GitHub">
+                    GitHub
+                </a>
+                <a href="/auth/linkedin/login" class="social-btn">
+                    <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn">
+                    LinkedIn
+                </a>
+            </div>
+            <p style="text-align: center; color: #666;">or use your account</p>
+            <input type="email" name="email" placeholder="Email" required />
+            <input type="password" name="password" placeholder="Password" required />
+            <div id="signin-error" class="error-message"></div>
+            <button type="submit">Sign In</button>
+            <p class="toggle-form">
+                Don't have an account?<a href="#" onclick="toggleForm('signup')">Sign Up</a>
+            </p>
+        </form>
     </div>
 
     <script>
-        const signUpButton = document.getElementById('signUp');
-        const signInButton = document.getElementById('signIn');
-        const mobileSignUpButton = document.getElementById('mobileSignUp');
-        const mobileSignInButton = document.getElementById('mobileSignIn');
-        const container = document.getElementById('container');
-
-        function toggleForm() {
-            container.classList.toggle('right-panel-active');
-            mobileSignUpButton.style.display = container.classList.contains('right-panel-active') ? 'none' : 'block';
-            mobileSignInButton.style.display = container.classList.contains('right-panel-active') ? 'block' : 'none';
+        function toggleForm(type) {
+            document.getElementById('signup-container').classList.toggle('active');
+            document.getElementById('signin-container').classList.toggle('active');
+            document.getElementById('signup-error').textContent = '';
+            document.getElementById('signin-error').textContent = '';
         }
-
-        signUpButton.addEventListener('click', toggleForm);
-        signInButton.addEventListener('click', toggleForm);
-        mobileSignUpButton.addEventListener('click', toggleForm);
-        mobileSignInButton.addEventListener('click', toggleForm);
 
         async function handleSignup(e) {
             e.preventDefault();
@@ -407,7 +223,7 @@
                         'Content-Type': 'application/json',
                         'Accept': 'application/json'
                     },
-                    credentials: 'include',
+                    credentials: 'include',  // Include cookies in the request
                     body: JSON.stringify({
                         email: formData.get('email'),
                         password: formData.get('password'),
@@ -441,7 +257,7 @@
                         'Content-Type': 'application/x-www-form-urlencoded',
                         'Accept': 'application/json'
                     },
-                    credentials: 'include',
+                    credentials: 'include',  // Include cookies in the request
                     body: new URLSearchParams({
                         username: formData.get('email'),
                         password: formData.get('password')
@@ -457,8 +273,8 @@
                 window.location.href = data.redirect_url;
             } catch (error) {
                 console.error('Login error:', error);
-                document.getElementById('signin-error').textContent = error.message;
-                document.getElementById('signin-error').style.display = 'block';
+                document.getElementById('login-error').textContent = error.message;
+                document.getElementById('login-error').style.display = 'block';
             }
         }
 
@@ -467,6 +283,7 @@
             const params = new URLSearchParams(window.location.hash.substring(1));
             const token = params.get('access_token');
             if (token) {
+                // Set token in cookie
                 document.cookie = `access_token=${token}; path=/; secure; samesite=Lax`;
                 window.location.href = '/select_role';
             }
